--- a/DESeq_qa-suz12_Paper.Rmd
+++ b/DESeq_qa-suz12_Paper.Rmd
@@ -34,10 +34,10 @@ library(dplyr)
 Read in the featurecounts output, convert to a matrix, and remove unneccesary columns to include ONLY the count numbers, then convert columns to numeric.
 ```{r cts}
 setwd("C:\\Users\\eddie\\Desktop\\Research\\GitHub")
-cts <- as.matrix(read.table("./text_files/readcounts_qa.txt", sep="\t", row.names =1, header = TRUE))
+cts <- as.matrix(read.table("../text_files/readcounts_qa_new.txt", sep="\t", row.names =1, header = TRUE))
 cts <- as.matrix(cts[,-c(1:5)])
 ## change ncol to match number of columns
-cts_numeric <- matrix(as.numeric(cts), ncol = 19)
+cts_numeric <- matrix(as.numeric(cts), ncol = 25)
 dimnames(cts_numeric) <- list(rownames(cts), colnames(cts))
 ```
 
@@ -46,10 +46,10 @@ Export column names to a text file, open in a text editor and replace SRRs with 
 
 ```{r titles}
 samplesname <- colnames(cts)
-write.table(samplesname, file="samplenames.txt", sep="\t")
+write.table(samplesname, file="samplenames_qa.txt", sep="\t")
 
 #after editing sample names in excel or text editor (new names are in column 3), read in the spreadsheet with hand annotated sample names that are short 
-rename <- read.table("./samplenames3.txt", header=FALSE, skip=1, sep = "\t")
+rename <- read.table("./samplenames_qa.txt", header=FALSE, skip=1, sep = "\t")
 #assign short sample names to variable
 cnames <- rename$V2
 #replace column names
@@ -59,12 +59,12 @@ colnames(cts_numeric) <- cnames
 All samples must have the same number of replicates. I'm averaging across samples that have multiple technical replicates, then reducing the number of replicates to 2 for each condition.
 
 ```{r titles}
-suz12 <- rowMeans(cts_numeric[, 1:3], na.rm = TRUE)
-WT <- rowMeans(cts_numeric[, 4:7], na.rm = TRUE)
-WT_0hr <- rowMeans(cts_numeric[, 11:13], na.rm = TRUE)
-WT_24hr <- rowMeans(cts_numeric[, 8:10], na.rm = TRUE)
-qa_0hr <- rowMeans(cts_numeric[, 14:15], na.rm = TRUE)
-qa_24hr <- cts_numeric[, 19]
+suz12 <- rowMeans(cts_numeric_3[, 1:3], na.rm = TRUE)
+# WT <- rowMeans(cts_numeric[, 4:7], na.rm = TRUE)
+WT_0hr <- rowMeans(cts_numeric_3[, 4:8], na.rm = TRUE)
+WT_24hr <- rowMeans(cts_numeric_3[, 9:13], na.rm = TRUE)
+qa_0hr <- rowMeans(cts_numeric_3[, 14:17], na.rm = TRUE)
+qa_24hr <- cts_numeric_3[,18:21]
 #set3 <- rowMeans(cts_numeric[, 29:30], na.rm = TRUE)
 ```
 
@@ -109,11 +109,11 @@ dds<- DESeqDataSetFromMatrix(countData = round(cts_numeric_3),
 dds
 
 ##pre-filteringreads <2
-keep <- rowSums(counts(dds)) >= 20
+keep <- rowSums(counts(dds)) >= 25
 dds<- dds[keep,]
 
 #specify level of comparison
-dds$condition <- relevel(dds$condition, ref = "WT")
+dds$condition <- relevel(dds$condition, ref = "WT_0hr")
 ```
 
 Now, run DEseq and plot dispesion estimates to see the quality of the fit. 
@@ -127,11 +127,11 @@ Export genes with statistically significant differential expression when compare
 ```{r coldata}
 alpha = 0.05
 
-suz12 <- results(dds2, alpha=alpha, contrast=c("condition", "suz12", "WT"))
-WT_0hr <- results(dds2, alpha=alpha, contrast=c("condition", "WT_0hr", "WT"))
-WT_24hr <- results(dds2, alpha=alpha, contrast=c("condition", "WT_24hr", "WT"))
-qa_0hr <- results(dds2, alpha=alpha, contrast=c("condition", "qa_0hr", "WT"))
-qa_24hr <- results(dds2, alpha=alpha, contrast=c("condition", "qa_24hr", "WT"))
+suz12 <- results(dds2, alpha=alpha, contrast=c("condition", "suz12", "WT_0hr"))
+# WT_0hr <- results(dds2, alpha=alpha, contrast=c("condition", "WT_0hr", "WT_0hr"))
+WT_24hr <- results(dds2, alpha=alpha, contrast=c("condition", "WT_24hr", "WT_0hr"))
+qa_0hr <- results(dds2, alpha=alpha, contrast=c("condition", "qa_0hr", "WT_0hr"))
+qa_24hr <- results(dds2, alpha=alpha, contrast=c("condition", "qa_24hr", "WT_0hr"))
 
 ```
 
@@ -139,13 +139,13 @@ Subset to only export significant differentially expressed genes
 
 ```{r}
 suz12_sig <- subset(suz12, padj < 0.05)
-WT_0hr_sig <- subset(WT_0hr, padj < 0.05)
+# WT_0hr_sig <- subset(WT_0hr, padj < 0.05)
 WT_24hr_sig <- subset(WT_24hr, padj < 0.05)
 qa_0hr_sig <- subset(qa_0hr, padj < 0.05)
 qa_24hr_sig <- subset(qa_24hr, padj < 0.05)
 
 write.csv(as.data.frame(suz12_sig), file = "suz12.csv")
-write.csv(as.data.frame(WT_0hr_sig), file = "WT_0hr.csv")
+# write.csv(as.data.frame(WT_0hr_sig), file = "WT_0hr.csv")
 write.csv(as.data.frame(WT_24hr_sig), file = "WT_24hr.csv")
 write.csv(as.data.frame(qa_0hr_sig), file = "qa_0hr.csv")
 write.csv(as.data.frame(qa_24hr_sig), file = "qa_24hr.csv")
@@ -203,43 +203,44 @@ Compare gene upregulation using UpSet plots. Data is entered by first listing th
 #)
 
 
-To make the UpSet plot, run the code "upset(fromExpression(input)," and input parameters (read the documentation for full list of options). You MUST specify the number of categories (nsets) and number of intersections (nintersects), which INCLUDES the number of individual categories.
+To make the UpSet plot, run the code "upset(fromExpression(input)," and input parameters (read the documentation for full list of options). You MUST specify the number of categories (nsets) and number of intersections (nintersects), which INCLUDES the number of individual 
+categories.
 
 ```{r}
-install.packages("UpSetR")
-library(UpSetR)
-
-#library(UpSetR)
-
-# Dataset
-input <- c(
-  Day3 = 1233,
-  Day4 = 1407,
-  Day5 = 1457,
-  Day6 = 1489,
-  "Day3&Day4" = nrow(intersect(peri_3, peri_4)),
-  "Day3&Day5" = nrow(intersect(peri_3, peri_5)),
-  "Day3&Day6" = nrow(intersect(peri_3, peri_6)),
-  "Day4&Day5" = nrow(intersect(peri_4, peri_5)),
-  "Day4&Day6" = nrow(intersect(peri_4, peri_6)),
-  "Day5&Day6" = nrow(intersect(peri_5, peri_6)),
-  "Day3&Day4&Day5" = nrow(intersect(intersect(peri_3, peri_4), peri_5)),
-  "Day4&Day5&Day6" = nrow(intersect(intersect(peri_4, peri_5), peri_6)),
-  "Day3&Day5&Day6" = nrow(intersect(intersect(peri_3, peri_5), peri_6)),
-  "Day3&Day4&Day6" = nrow(intersect(intersect(peri_3, peri_4), peri_6)),
-  "Day3&Day4&Day5&Day6" = nrow(intersect(intersect(intersect(peri_3, peri_4), peri_6), peri_5)))
-  
- upset(fromExpression(input), 
-      nintersects = 15, 
-      nsets = 4, 
-      order.by = "freq", 
-      decreasing = T, 
-      mb.ratio = c(0.6, 0.4),
-      number.angles = 0, 
-      text.scale = 1.4, 
-      point.size = 2.8, 
-      line.size = 1
-      )
+# install.packages("UpSetR")
+# library(UpSetR)
+# 
+# #library(UpSetR)
+# 
+# # Dataset
+# input <- c(
+#   Day3 = 1233,
+#   Day4 = 1407,
+#   Day5 = 1457,
+#   Day6 = 1489,
+#   "Day3&Day4" = nrow(intersect(peri_3, peri_4)),
+#   "Day3&Day5" = nrow(intersect(peri_3, peri_5)),
+#   "Day3&Day6" = nrow(intersect(peri_3, peri_6)),
+#   "Day4&Day5" = nrow(intersect(peri_4, peri_5)),
+#   "Day4&Day6" = nrow(intersect(peri_4, peri_6)),
+#   "Day5&Day6" = nrow(intersect(peri_5, peri_6)),
+#   "Day3&Day4&Day5" = nrow(intersect(intersect(peri_3, peri_4), peri_5)),
+#   "Day4&Day5&Day6" = nrow(intersect(intersect(peri_4, peri_5), peri_6)),
+#   "Day3&Day5&Day6" = nrow(intersect(intersect(peri_3, peri_5), peri_6)),
+#   "Day3&Day4&Day6" = nrow(intersect(intersect(peri_3, peri_4), peri_6)),
+#   "Day3&Day4&Day5&Day6" = nrow(intersect(intersect(intersect(peri_3, peri_4), peri_6), peri_5)))
+#   
+#  upset(fromExpression(input), 
+#       nintersects = 15, 
+#       nsets = 4, 
+#       order.by = "freq", 
+#       decreasing = T, 
+#       mb.ratio = c(0.6, 0.4),
+#       number.angles = 0, 
+#       text.scale = 1.4, 
+#       point.size = 2.8, 
+#       line.size = 1
+#       )
 ```
 
 #IGV Track
@@ -247,7 +248,7 @@ input <- c(
 ngenes = read.csv("../csv_files/neurospora_genes.csv")
 
 combine <- transform(merge(ngenes, l2fc, by = "VALUE"))
-track = combine %>% select("SequenceID", "FeatureStart", "FeatureEnd", "VALUE", "suz12_sig.csv", "WT_0hr_sig.csv", "WT_24hr_sig.csv", "qa_0hr_sig.csv", "qa_24hr_sig.csv")
+track = combine %>% select("SequenceID", "FeatureStart", "FeatureEnd", "VALUE", "suz12.csv", "WT_24hr.csv", "qa_0hr.csv", "qa_24hr.csv")
 
 write.table(track, file="qa-suz12.igv", sep="\t", row.names = FALSE, quote = FALSE)
 ```
