--- a/DESeq_qa-suz12_Paper.Rmd
+++ b/DESeq_qa-suz12_Paper.Rmd
@@ -34,10 +34,10 @@ library(dplyr)
 Read in the featurecounts output, convert to a matrix, and remove unneccesary columns to include ONLY the count numbers, then convert columns to numeric.
 ```{r cts}
 setwd("C:\\Users\\eddie\\Desktop\\Research\\GitHub")
-cts <- as.matrix(read.table("../text_files/readcounts_qa_new.txt", sep="\t", row.names =1, header = TRUE))
+cts <- as.matrix(read.table("../text_files/readcounts_qa_WT0_only.txt", sep="\t", row.names =1, header = TRUE))
 cts <- as.matrix(cts[,-c(1:5)])
 ## change ncol to match number of columns
-cts_numeric <- matrix(as.numeric(cts), ncol = 25)
+cts_numeric <- matrix(as.numeric(cts), ncol = 21)
 dimnames(cts_numeric) <- list(rownames(cts), colnames(cts))
 ```
 
@@ -49,7 +49,7 @@ samplesname <- colnames(cts)
 write.table(samplesname, file="samplenames_qa.txt", sep="\t")
 
 #after editing sample names in excel or text editor (new names are in column 3), read in the spreadsheet with hand annotated sample names that are short 
-rename <- read.table("./samplenames_qa.txt", header=FALSE, skip=1, sep = "\t")
+rename <- read.table("./samplenames_qa_0hr.txt", header=FALSE, skip=1, sep = "\t")
 #assign short sample names to variable
 cnames <- rename$V2
 #replace column names
